<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">胎心音频监测</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

	     <string name="upload_title">上传附件</string>
     <string name="upload_begin">上传</string>
    <string name="look_pictrue">浏览</string>
    <string name="file_upload">文件上传：</string>
    <string name="cancel_back">返回</string>
        <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_password_hint">请输入密码</string>     
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
</resources>
