<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/biz_news_local_weather_bg_big">

  <RelativeLayout 
  	android:id="@+id/login_div"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="15dip"        
  	android:layout_margin="15dip" 
  	android:background="@drawable/background_login_div_bg"
  	>
  	<!-- 账号 -->
  	<TextView 
  		android:id="@+id/login_user_input"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="5dp"
  		android:text="@string/login_label_username"
  		style="@style/normalText"/>
  	<EditText 
  		android:id="@+id/username_edit"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_username_hint"
  		android:layout_below="@id/login_user_input"
  		android:singleLine="true"
  		android:inputType="text"/>
    <!-- 密码 text -->
    <TextView 
    	android:id="@+id/login_password_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/username_edit"
    	android:layout_marginTop="3dp"
    	android:text="@string/login_label_password"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/password_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/login_password_input"
    	android:hint="@string/login_password_hint"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    />
    <!-- 登录button -->

    <Button
        android:id="@+id/signin_button"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_alignRight="@+id/password_edit"
        android:layout_below="@+id/password_edit"
        android:layout_marginTop="17dp"
        android:background="@drawable/selector_message_button"
        android:text="@string/login_label_signin"
        android:textColor="#2C74B0" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_edit"
        android:layout_alignTop="@+id/signin_button"
        android:text="@string/login_register_link"
        android:textColor="#444"
        android:textColorLink="#FF0066CC" />

  </RelativeLayout>
  
  
  <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
	    <ImageView android:id="@+id/miniTwitter_logo"
	        android:src="@drawable/cat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="25dp"
	         />

	    </RelativeLayout>
 
</LinearLayout>
